src/main/java/com/example/darts/errors/DartsErrorResponse.java
package com.example.darts.errors;

public class DartsErrorResponse {
    private String message;
    private long timestamp;

    public DartsErrorResponse(String message, long timestamp) {
        this.message = message;
        this.timestamp = timestamp;
    }

    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }

    public long getTimestamp() {
        return timestamp;
    }

    public void setTimestamp(long timestamp) {
        this.timestamp = timestamp;
    }
}
